# chatbot-plugin

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  alembic.ini  providers.example.toml  pyproject.toml
.github/workflows/: ai-pr-reviewer.yml  ci.yml
alembic/: env.py
alembic/versions/: 001_initial_articles.py  002_toolbox_schema.py
docs/superpowers/plans/: 2026-06-16-generation-layer.md
docs/superpowers/specs/: 2026-06-16-generation-layer.md
scripts/: fix_sparsevec.py
specs/: chat-api.md  integration.md  rag-pipeline.md  toolbox-api.md
src/chatbot_plugin/: __init__.py  chat_service.py  config.py  db.py  embedding.py  main.py  observability.py  routers.py  service.py
src/chatbot_plugin/contracts/: __init__.py  chat_completion.py  requests.py  responses.py
src/chatbot_plugin/llm/: __init__.py  base.py  base_provider.py  bootstrap.py  claude_provider.py  config.py  gemini_provider.py  openrouter_provider.py  resilient_llm_service.py
src/chatbot_plugin/llm/rate_limit/: __init__.py  no_op_strategy.py  quota_strategy.py  sliding_window_strategy.py
src/chatbot_plugin/models/: __init__.py  article.py  chunk.py
src/chatbot_plugin/rag/: __init__.py  chain.py  prompt.py  retriever.py
src/chatbot_plugin/routers/: __init__.py  chat.py
src/chatbot_plugin/services/: chat_service.py
src/tests/: conftest.py  test_chain.py  test_chat_service.py  test_llm_caller.py  test_models.py  test_prompt.py  test_retriever.py  test_service.py
src/tests/contracts/: test_contracts.py
src/tests/llm/: test_base.py  test_base_provider.py  test_bootstrap.py  test_provider_implementations.py  test_providers.py  test_rate_limit.py  test_resilient_service.py
src/tests/routers/: test_chat.py  test_toolbox.py
