[project]
name = "chatbot-plugin"
version = "0.3.0"
description = "OpenAI-compatible RAG chat backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "chatbot-plugin-sdk",
]

[dependency-groups]
dev = [
    "httpx",           # ASGITransport + AsyncClient for tests
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot_plugin"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"
